--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,16 +6,17 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+jobs: 
+  build: 
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-    steps:
+        python-version: [3.7,3.8,3.9,3.11]
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{matrix.os}}
+    steps: 
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: install packages
